--- a/Program/Program.vcxproj
+++ b/Program/Program.vcxproj
@@ -78,10 +78,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Board.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="gfx.h" />
     <ClInclude Include="Mouse.h" />
+    <ClInclude Include="Random.h" />
+    <ClInclude Include="Tile.h" />
     <ClInclude Include="Vector2i.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Rect.h" />
@@ -89,9 +92,11 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Board.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="gfx.cpp" />
     <ClCompile Include="Program.cpp" />
+    <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Program.rc" />
