--- a/Program/Program.vcxproj
+++ b/Program/Program.vcxproj
@@ -79,13 +79,21 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Board.h" />
+    <ClInclude Include="Button.h" />
+    <ClInclude Include="FileRW.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="gfx.h" />
     <ClInclude Include="Mouse.h" />
+    <ClInclude Include="Particles.h" />
     <ClInclude Include="Random.h" />
+    <ClInclude Include="ScreenTransition.h" />
+    <ClInclude Include="SetupMenu.h" />
+    <ClInclude Include="Sprite.h" />
+    <ClInclude Include="StateMachine.h" />
     <ClInclude Include="Tile.h" />
-    <ClInclude Include="Vector2i.h" />
+    <ClInclude Include="txt.h" />
+    <ClInclude Include="Vec2.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Resource.h" />
@@ -93,15 +101,23 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Button.cpp" />
+    <ClCompile Include="FileRW.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="gfx.cpp" />
+    <ClCompile Include="Particles.cpp" />
     <ClCompile Include="Program.cpp" />
+    <ClCompile Include="ScreenTransition.cpp" />
+    <ClCompile Include="SetupMenu.cpp" />
+    <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="StateMachine.cpp" />
     <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Program.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="font_monospace12x20.bmp" />
     <Image Include="Program.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
